--- a/Lab21/src/views/layouts/main.hbs
+++ b/Lab21/src/views/layouts/main.hbs
@@ -9,5 +9,10 @@
 </head>
 <body>
 	{{{body}}}
+	{{#if deny}}
+	<form action="/" method="get">
+		<input type="submit" style="deny-btn" value="Отказаться">
+	</form>
+	{{/if}}
 </body>
 </html>
